fix sidebar z-index

--- a/public/assets/css/includes/header-sidebar.css
+++ b/public/assets/css/includes/header-sidebar.css
@@ -37,6 +37,7 @@
 	max-height: 620px;
 	overflow-y: auto;
 	overflow-x: hidden;
+	z-index: 99;
 }
 	#sidebar h2 {
 		font-size: 10px;
